--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="col-md-2 text-center my-auto" id="sub-box-2" >
 
-            <button class="btn btn-danger btn-lg" onclick="reset()"> Reset </button>
+            <button class="btn btn-danger btn-lg" onclick="reset()"> Clear </button>
              
         </div>
 
